kas-helm/kas-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: something.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kas-web
                port:
                  number: 8000
